--- a/TempleAll/TempleAll/Content/Site.css
+++ b/TempleAll/TempleAll/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿html {
-    background-color: #e2e2e2;
+    background-color: #333;
     margin: 0;
     padding: 0;
 }
@@ -120,7 +120,8 @@ header .content-wrapper {
 
 footer {
     clear: both;
-    background-color: #e2e2e2;
+    color: #c8c8c8;
+    background-color: #333;
     font-size: .8em;
     height: 100px;
 }
