separate layout for admin and user

--- a/TempleAll/TempleAll/Views/Shared/_adminLayout.cshtml
+++ b/TempleAll/TempleAll/Views/Shared/_adminLayout.cshtml
@@ -21,8 +21,11 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("ประวัติ", "AdminHistory", "Admin")</li>
+                            <li>@Html.ActionLink("สาระธรรม", "AdminKnowledge", "Admin")</li>
+                            <li>@Html.ActionLink("กิจกรรม-ข่าวสาร", "AdminActivity", "Admin")</li>
+                            <li>@Html.ActionLink("ติดต่อ", "AdminContact", "Admin")</li>
+                            <li>@Html.ActionLink("ถาม - ตอบ", "AdminAnswer", "Admin")</li>
                         </ul>
                     </nav>
                 </div>
